--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,5 +1,9 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
     <h1>{{ title }}: The Online Marketplace for Used Textbooks</h1>
     <h4></h4>
 </mat-toolbar>
+
+<div>
+    <app-booklist></app-booklist>
+</div>
 
