--- a/web/src/app/booklist/booklist.component.html
+++ b/web/src/app/booklist/booklist.component.html
@@ -2,22 +2,22 @@
     <h4>Current Booklist</h4>
 </mat-toolbar>
 <p></p>
-<div fxFlex="25%">
-  <mat-card>
-      <mat-card-header>
-          <mat-card-title>{{book.subject}}</mat-card-title>
-          <mat-card-subtitle>{{book.course_num}} : {{book.course_desc}}</mat-card-subtitle>
-      </mat-card-header>
-      <!-- <img matCardImage src="Card wide image source"> -->
-      <mat-card-content>
-          {{book.isbn}}
-      </mat-card-content>
-      <!-- <mat-card-actions align="start">
-          <button mat-button (click)="onAction1">Action1</button>
-          
-      </mat-card-actions> -->
-      <!-- <mat-card-footer>
-          Footer
-      </mat-card-footer> -->
-  </mat-card>
+
+<div *ngFor='let book of books' fxFlex="25%">
+    <mat-card >
+        <mat-card-header>
+            <mat-card-title>{{book.subject}}</mat-card-title>
+            <mat-card-subtitle>{{book.course_num}} : {{book.course_desc}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <div fxLayout="row">
+                <div fxFlex>
+                <img src="http://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg?default=false">
+                </div>
+                <div fxFlex="10">&nbsp;</div>
+                <div fxFlex><strong>ISBN:</strong> {{book.isbn}}</div>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
+
