--- a/web/src/app/booklist/booklist.component.html
+++ b/web/src/app/booklist/booklist.component.html
@@ -3,21 +3,23 @@
 </mat-toolbar>
 <p></p>
 
-<div *ngFor='let book of books' fxFlex="25%">
-    <mat-card >
-        <mat-card-header>
-            <mat-card-title>{{book.subject}}</mat-card-title>
-            <mat-card-subtitle>{{book.course_num}} : {{book.course_desc}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <div fxLayout="row">
-                <div fxFlex>
-                <img src="http://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg?default=false">
+<div fxLayout="row wrap" fxLayoutGap="5">
+    <div *ngFor='let book of books' fxFlex="25">
+        <mat-card style="height:95%; max-height: 95%; background-color: #eeeeee;">
+            <mat-card-header>
+                <mat-card-title><h3>{{book.subject}}</h3></mat-card-title>
+                <mat-card-subtitle><h4>{{book.course_num}} : {{book.course_desc}}</h4></mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <div fxLayout="row">
+                    <div fxFlex>
+                    <img src="http://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg?default=false" style="max-height: 210px;">
+                    </div>
+                    <div fxFlex="10">&nbsp;</div>
+                    <div fxFlex><strong>ISBN:</strong> {{book.isbn}}</div>
                 </div>
-                <div fxFlex="10">&nbsp;</div>
-                <div fxFlex><strong>ISBN:</strong> {{book.isbn}}</div>
-            </div>
-        </mat-card-content>
-    </mat-card>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
 
