Service for Subjects data retrieval

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -4,6 +4,10 @@
 </mat-toolbar>
 
 <div>
-    <app-booklist></app-booklist>
+    <app-courses></app-courses>
 </div>
+
+<!-- <div>
+    <app-booklist></app-booklist>
+</div> -->
 
