--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body {
+/* body {
     display: flex;
     margin: 0;
-}
+} */
 
 /* div {
     display: flex;
 } */
 
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+} 
